<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:bootstrapbutton="http://schemas.android.com/apk/res-auto"
    xmlns:fontawesometext="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin" >

        <TextView
            style="@style/header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/manage_account" />

        <GridLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:columnCount="2"
            android:orientation="horizontal" >

            <TextView
                android:layout_column="0"
                android:layout_gravity="end"
                android:text="@string/name" />

            <EditText
                android:id="@+id/nameInput"
                android:ems="10"
                android:inputType="textCapWords" />

            <TextView
                android:layout_column="0"
                android:layout_gravity="end"
                android:text="@string/second_name" />

            <EditText
                android:id="@+id/secondNameInput"
                android:ems="10"
                android:inputType="textCapWords" />

            <TextView
                android:layout_column="0"
                android:layout_gravity="end"
                android:text="@string/password" />

            <EditText
                android:id="@+id/passwordInput"
                android:ems="8"
                android:inputType="textPassword" />          
        </GridLayout>

        <com.beardedhen.androidbootstrap.BootstrapButton
            android:id="@+id/registerButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/register"
            bootstrapbutton:bb_icon_right="fa-check-circle"
            bootstrapbutton:bb_roundedCorners="true"
            bootstrapbutton:bb_type="primary" />
    </LinearLayout>

</ScrollView>