<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:bootstrapbutton="http://schemas.android.com/apk/res-auto"
    xmlns:fontawesometext="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        style="@style/header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_medications" />

    <ListView
        android:id="@+id/medicationsListView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <com.beardedhen.androidbootstrap.BootstrapButton
            android:id="@+id/saveButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/save"
            bootstrapbutton:bb_icon_right="fa-check-circle"
            bootstrapbutton:bb_roundedCorners="true"
            bootstrapbutton:bb_type="primary" />

        <com.beardedhen.androidbootstrap.BootstrapButton
            android:id="@+id/returnButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/cancel"
            bootstrapbutton:bb_icon_right="fa-arrow-circle-left"
            bootstrapbutton:bb_roundedCorners="true"
            bootstrapbutton:bb_type="danger" />
    </LinearLayout>

</LinearLayout>